{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 14,
  "lineage": "7e75b325-28fa-bbd0-d2e6-f6c4424e94f1",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "existing_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/cecureq/global/networks/default",
            "name": "default",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cecureq/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/africa-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-central1/subnetworks/time-api-subnet",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-central1/subnetworks/gke-time-api-cluster-0b3958a5-pe-subnet",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west10/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/cecureq/regions/europe-central2/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-02T18:50:28.177-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cecureq/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/cecureq/global/networks/default",
            "priority": 1000,
            "project": "cecureq",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cecureq/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.existing_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-02T18:50:28.614-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cecureq/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/cecureq/global/networks/default",
            "priority": 1000,
            "project": "cecureq",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cecureq/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.existing_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-02T18:50:29.066-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/cecureq/regions/us-central1/routers/default-router",
            "name": "default-router",
            "network": "https://www.googleapis.com/compute/v1/projects/cecureq/global/networks/default",
            "project": "cecureq",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-central1/routers/default-router"
          },
          "dependencies": [
            "data.google_compute_network.existing_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "cecureq/us-central1/default-router/default-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "default-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "cecureq",
            "region": "us-central1",
            "router": "default-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_network.existing_network",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-02T18:50:29.953-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/cecureq/regions/us-central1/subnetworks/time-api-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "time-api-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cecureq/global/networks/default",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cecureq",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.28.0.0/14",
                "range_name": "gke-time-api-cluster-pods-9f8d3277"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cecureq/regions/us-central1/subnetworks/time-api-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "data.google_compute_network.existing_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "time_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "time-api",
            "metadata": [
              {
                "generation": 0,
                "name": "time-api",
                "resource_version": "4629",
                "uid": "50a49563-6680-4f90-b594-5b52d42b426e"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_compute_network.existing_network",
            "google_compute_subnetwork.subnet",
            "google_container_cluster.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "time_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    }
  ]
}